@@ -6,7 +6,7 @@
                   reset python:options.get('reset', None) or here.portal_password_reset.requestReset(member.getId())"
 >From: <span tal:replace="structure view/encoded_mail_sender" />
 To: <span tal:replace="python:member.getProperty('email')" />
-Subject: <span tal:replace="view/encoded_registered_notify_subject" />
+Subject: <span tal:replace="view/registered_notify_subject" />
 Precedence: bulk
 
 <div i18n:domain="passwordresettool"
