@@ -18,8 +18,8 @@ Test passwordreset BrowserView
     >>> view.encoded_mail_sender()
     '"=?utf-8?q?Old=C5=99ich_a_Bo=C5=BEena?=" <smith@example.com>'
 
-    >>> view.encoded_registered_notify_subject()
-    '=?utf-8?q?User_Account_Information_for_Koko=C5=99=C3=ADn_Portal?='
+    >>> view.registered_notify_subject()
+    u'User Account Information for Koko\u0159\xedn Portal'
 
-    >>> view.encoded_mail_password_subject()
-    'Password reset request'
+    >>> view.mail_password_subject()
+    u'Password reset request'
